--- a/src/components/text-content/TextContent.css
+++ b/src/components/text-content/TextContent.css
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #FFFFFF;
+    border-radius: 25px;
+    box-shadow: 0px 3px 31px 0px rgba(112,112,112,0.75);
 
 }
 .freeDiv{
@@ -35,6 +38,9 @@
     font-size: 18px;
     margin-bottom: 19.8px;
 }
+.textbox-content {
+    padding-bottom: 30.5px;
+}
 .datapicker{
     padding-top: 14.7px;
     padding-bottom: 18.5px;
@@ -58,3 +64,24 @@
     padding-bottom: 43.6px;
     font-style: bold;
 }
+.btn3 {
+    color: #FFFFFF;
+    line-height: 24px;
+    width: 207px;
+    height: 68px;
+    border-radius: 39px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: #FFCA05;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+
+.moreRead{
+    display: flex;
+    justify-content: center;
+    margin-top:51.5px ;
+ }
