--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,14 +1,13 @@
-.btn{
-    width: 143px;
-    height: 42px;
-    opacity: 100%;
-    border: 1px solid #707070;
-    color: #221F1F;
-    font-size: 20px;
-    border-radius: 50px;
+.btn4 {
+    height: 95px;
+    font-size: 29px;
+    width: 48%;
+    border-radius: 54px;
     display: flex;
     justify-content: center;
-    text-align: center;
     align-items: center;
-    font-size: 20px;
+    box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.75);
+}
+.btn4:hover {
+    background-color: #FFCA05;
 }
