--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -14,6 +14,7 @@
 }
 .contact-left-wrap{
     width: 50%;
+    padding-left: 360px;
 }
 .contact-info{
     max-width: 482px;
@@ -51,6 +52,7 @@
     border: none;
     color: #A7A7A7;
     margin-top: 39px;
+    background-color: #FAFAFA;
 }
 #lastName{
     margin-left: 16px;
@@ -67,4 +69,15 @@
 .contact-wrap{
     display: flex;
     flex-direction: row;
+}
+#contact-button{
+    width: 369px;
+    height: 90px;
+    border-radius: 45px;
+    background-color: #FFCA05;
+    color: #FFFFFF;
+    font-size: 28px;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
