--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -21,7 +21,8 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 140px;
+    width: 142px; 
+    /* 140 unda iyos */
 }
 .footer-border-div{
     width: 26.37px;
