--- a/src/components/maintext/MainText.css
+++ b/src/components/maintext/MainText.css
@@ -18,7 +18,8 @@
 }
 .circle2 {
     background-color: #FFCA05;
-    width: 50px;
+    max-width: 50px;
+    width: 100%;
     height: 50px;
     border-radius: 50%;
 
