--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -14,7 +14,9 @@
 }
 .contact-left-wrap{
     width: 50%;
-    padding-left: 360px;
+    display: flex;
+    justify-content: flex-end;
+
 }
 .contact-info{
     max-width: 482px;
@@ -43,9 +45,11 @@
     border:none ;
     padding-left:5px;
     color: #A7A7A7;
+    width: 100%;
 }
 #TextArea{
-    width: 529.93px;
+    max-width: 529.93px;
+    width: 100%;
     height: 76px;
     border-radius: 10px;
     box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.20);
@@ -72,4 +76,12 @@
 }
 #sendbtn {
     margin-top: 40px;
+}
+.left-wrap-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-width:530px;
+    width: 100%;
+    margin-right: 80px;
 }
