--- a/src/components/readMoreButton/ReadMore.css
+++ b/src/components/readMoreButton/ReadMore.css
@@ -11,7 +11,8 @@
     font-weight: bold;
 }
 #moreButton{
-    width: 369px;
+    max-width: 369px;
+    width: 100%;
     height: 90px;
     background-color: #FFCA05;
     color: #ffffff;
