--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -12,19 +12,17 @@
 .footer-conten h2{
     font-size: 15px;
 }
-.footerIcons {
-    width:13px;
-   height: 13px;
-   margin: 5px;
+.footer-image{
+    animation: lelo_logo .5s
+    ease-in-out infinite alternate;
 }
+
 .footer-icons{
     display: flex;
     align-items: center;
-    color: #fff;
     justify-content: space-around;
     width: 140px; 
-    animation: first_color .5s;
-    /* 140 unda iyos */
+
 }
 .footer-border-div{
     width: 26.37px;
@@ -34,7 +32,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
+    animation: first .5s
+    ease-in-out infinite alternate;
     
 }
 .footer-content{
@@ -44,27 +43,37 @@
     height: 50px;
     width: 50%;
 }
+#footer-contact-heading{
+    animation: second .5s
+    ease-in-out infinite alternate;
+}
 .lelo-logo{
     display: flex;
     align-items: center;
+
 }
 #linkden-img{
     margin-left: 20px;
     margin-right: 20px;
 }
-.footerIcons:nth-child(2){
-    animation-name: second_color;
+.footerIcons {
+    width:13px;
+   height: 13px;
+   margin: 5px;
+   cursor: pointer;
 }
-.footerIcons:nth-child(3){
-    animation-name: third_color;
+@keyframes first {
+    from {box-shadow:0 0 10px #1877f2,
+        0 0 20px #1459b3, 0 0 30px #179bff;}
+    to{box-shadow: 0 0 5px #1877f2,
+        0 0 10px #1459b3, 0 0 15px #179bff;}
 }
-@keyframes first_color {
-    0% {
-        text-shadow: 0 0 10px #1877f2,
-        0 0 20px #1459b3, 0 0 30px #179bff
+
+@keyframes second {
+    from {
+        color:#25d366;
     }
-    100% {
-        text-shadow: 0 0 5px #1877f2,
-        0 0 10px #1459b3, 0 0 15px #179bff
+    to {
+       color: #0ec0a5  
     }
 }
