--- a/src/components/newsContent/NewPageContent.css
+++ b/src/components/newsContent/NewPageContent.css
@@ -7,7 +7,7 @@
 .ContentPage{
     max-width: 1920px;
 }
-form {
+.search-form form {
     width: 466px;
     height: 42px;
     border-radius: 5px;
@@ -17,7 +17,7 @@ form {
     border-radius: 21px;
     background-color: #EBEBEB;
   }
-input {
+.search-form input {
     all: unset;
     font: 16px system-ui;
     color: #221F1F;
