--- a/src/components/registration/Register.css
+++ b/src/components/registration/Register.css
@@ -1,12 +1,13 @@
 
 .register-heading{
     max-width: 1280px;
-
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     margin-top: 95px;
-
+}
+#register-heading{
+    font-size: 2rem;
 }
 .register-wrap{
     display: flex;
