--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -27,41 +27,16 @@
     font-size: 18px;
 
 }
-#number-span{ 
+#number-span a{ 
     color: #FFCA05;
     font-weight: bold;
 }
-#email-span{
+#email-span a{
     color: #FFCA05;
     font-weight: bold;
 }
-.registration-form input {
-    max-width: 136px;
-    height: 35px;
-    font-size: 13px;
-    font-weight: 100;
-    border-radius: 18px;
-    box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.20);
-    border:none ;
-    padding-left:5px;
-    color: #A7A7A7;
-    width: 100%;
-}
-#TextArea{
-    max-width: 529.93px;
-    width: 100%;
-    height: 76px;
-    border-radius: 10px;
-    box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.20);
-    border: none;
-    color: #A7A7A7;
-    margin-top: 39px;
-    background-color: #FAFAFA;
-}
-#lastName{
-    margin-left: 16px;
-    margin-right: 16px;
-}
+
+
 .contact-right-wrap{
     width: 50%;
 }
@@ -80,8 +55,10 @@
 .left-wrap-content{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    align-items: center;
+    text-align: start;
     max-width:530px;
     width: 100%;
     margin-right: 80px;
+    margin-top: 100px;
 }
