--- a/src/components/text-content/TextContent.css
+++ b/src/components/text-content/TextContent.css
@@ -7,6 +7,7 @@
     background-color: #FFFFFF;
     border-radius: 25px;
     box-shadow: 0px 3px 31px 0px rgba(112,112,112,0.75);
+    margin: 50px 10px ;
 
 }
 .freeDiv{
