--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -7,8 +7,11 @@
 .navigation ul {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    
   
+}
+#lastNav{
+    margin-left:50px;
 }
 .navigation ul{
     max-width: 970px;
@@ -16,7 +19,7 @@
 .nav{
     display: flex;
     justify-content: flex-end;
-    position: absolute;
+ 
 
 }
 .navigation li a {
@@ -52,5 +55,37 @@
 .flex{
     display: flex;
     justify-content: flex-end;
+
+}
+@media screen and (max-width:1710px){
+    .navigation {
+        max-width: 1300px;
+        transition: 1s;
+      
+    }
+    #nav-logo{
+        margin-right: 70px;
+        transition: 0.5s;
+    }
+    
+}
+@media screen and (max-width:1445px){
+    .navigation {
+        max-width: 1100px;
+        transition: 1s;
+    }
+}
+@media screen and (max-width:1280px){
+    .navigation {
+        max-width: 1050px;
+        transition: 1s;
+    }
+    #nav-logo{
+        margin-right: 20px;
+        transition: 0.5s;
+    }
+}
+/* burgeri iqneba aq */
+@media screen and (max-width:1280px){
 
 }
