--- a/src/components/team/Team.css
+++ b/src/components/team/Team.css
@@ -74,6 +74,9 @@
     justify-content: space-between;
     margin-top: 75px;
 }
+#team-content-texti{
+    padding: 40px;
+}
 
 @media screen and (max-width:1200px) {
     #team-h{
