--- a/src/components/form/FormApp.css
+++ b/src/components/form/FormApp.css
@@ -6,7 +6,7 @@
     border-radius: 10px;
     height: 600px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns:1fr 1fr;
   }
   
   .close-btn {
@@ -153,3 +153,38 @@
     color: #27cdff;
     font-weight: 600;
   }
+
+@media screen and (max-width:1200px) {
+  .form-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 800px;
+    width: 600px;
+    gap: 10px;
+    transition: 1s;
+  }
+  .form-inputs input {
+    width: 200px;
+    height: 25px;
+  }
+  .form-input-btn{
+   width: 200px;
+   height: 25px;
+  }
+  .form-inputs{
+    width: auto;
+  }
+  .form h1{
+    width: auto;
+    padding-top: 10px;
+  }
+}
+@media screen and (max-width:780px) {
+  .form-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 800px;
+    width: 400px;
+    gap: 10px;
+  }
+}
