--- a/src/components/form/FormApp.css
+++ b/src/components/form/FormApp.css
@@ -178,6 +178,9 @@
     width: auto;
     padding-top: 10px;
   }
+  .form-img-2 {
+    padding-top: 40px;
+  }
 }
 @media screen and (max-width:780px) {
   .form-container{
@@ -186,5 +189,8 @@
     height: 800px;
     width: 400px;
     gap: 10px;
+  }
+  .form-img-2 {
+    padding-top: 40px;
   }
 }
