--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -7,7 +7,6 @@
 .navigation ul {
     display: flex;
     align-items: center;
-    
   
 }
 
@@ -17,8 +16,6 @@
 .nav{
     display: flex;
     justify-content: flex-end;
- 
-
 }
 .navigation li a {
  color: #FFFFFF;
@@ -27,6 +24,7 @@
 }
 .navigation li a:hover{
     color: black;
+    transition: 0.8s;
   
 }
 .navigation{
@@ -50,6 +48,51 @@
     margin-right: 60px;
     margin-top: 53px;
 }
+.hamburger{
+    display: none;
+    cursor: pointer;
+    margin-top:100px;
+    margin-right:30px ;
+}
+#burgeri {
+    width: 100px;
+
+}
+.bar{
+    display: block;
+    width: 80px;
+    height: 6px;
+    margin: 5px auto;
+    -webkit-transform: all 0.3s easy-in-out;
+    transform: all 0.3s easy-in-out;
+    background-color: #FFCA05;
+
+}
+
+
+.hidden-menu{
+    position: absolute;
+    top: 120px;
+    right: 10%;
+    background-color: #FFCA05;
+    
+}
+.hidden-menu li{
+    padding: 10px;
+    line-height: 10px;
+}
+.hidden-menu a{
+    color: #fffdfd;
+    font-weight: bold;
+}
+
+.hidden-menu a:hover{
+    color: black;
+    transition: 1s;
+    font-weight: bold;
+}
+
+
 .flex{
     display: flex;
     justify-content: flex-end;
@@ -83,7 +126,67 @@
         transition: 0.5s;
     }
 }
-/* burgeri iqneba aq */
-@media screen and (max-width:1280px){
 
+
+@media(max-width:999px){
+    .hamburger{
+        display: flex;
+        justify-content: space-between;
+        transition: 1s;
+        
+    }
+    .navigation{
+        display: none;
+        transition: 1s;
+    }
+    .nav-image{
+        padding-right: 600px;
+        padding-top: 25px;
+        transition: 2.5s;
+    }
+ 
+    
+}
+@media(max-width:855px){
+    .nav-image{
+        padding-right: 450px;
+        padding-top: 25px;
+        transition: 2.5s;
+    }
+}
+@media(max-width:720px){
+    .nav-image{
+        padding-right: 350px;
+        padding-top: 25px;
+        transition: 2.5s;
+    }
+}
+@media(max-width:620px){
+    .nav-image{
+        padding-right: 250px;
+        padding-top: 40px;
+        transition: 2.5s;
+    }
+    .nav-image img{
+        max-width: 50px;
+        transition: 1s;
+    }
+    .bar{
+        width: 50px;
+        transition: 1s;
+    }
+}
+@media(max-width:480px){
+    .nav-image{
+        padding-right: 180px;
+        padding-top: 40px;
+        transition: 2.5s;
+}
+}
+@media(max-width:380px){
+    .nav-image{
+        padding-right: 150px;
+        padding-top: 40px;
+        transition: 2.5s;
+}
 }
