--- a/src/components/guindiSection/TeamPage.css
+++ b/src/components/guindiSection/TeamPage.css
@@ -40,3 +40,27 @@
     margin: 20px 0;
 }
 
+.next-button{
+    width: 207px;
+    height: 50px;
+    color: #ffffff;
+    background-color: #FFCA05;
+    cursor: pointer;
+    border-radius: 39px;
+    border: #FFCA05;
+    margin-top: 40px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.team-next-button{
+    display: flex;
+    justify-content: center;
+}
+
+@media(max-width:480px){
+    .next-button{
+        width: 150px;
+        height: 30px;
+        font-size: 15px;
+    }
+}
