--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -84,6 +84,8 @@
     border-bottom: 1px solid black;
     margin-bottom:10px;
     padding-left: 15px;
+    cursor: pointer;
+
  
 }
 .hidden-menu a{
